--- a/src/app/janitor/janitor.component.html
+++ b/src/app/janitor/janitor.component.html
@@ -36,5 +36,5 @@
       </tr>
     </tbody>
   </table>
-  <!--<span *ngIf="!janitors[0]">There are no Janitors running.</span>-->
+  <span *ngIf="!janitors[0]">There are no Janitors running.</span>
 </section>
