--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -27,14 +27,14 @@ a.nav-link:hover {
 .nav-item {
   text-align: right;
   font-size: 20px;
-  border-bottom: 1px solid #c6c6c6;
+  border-bottom: 1px solid rgba(0,0,0,0.1);
 }
 
 .sidenav {
   height: 100vh;
   width: 200px;
   display: block;
-  border-right: 1px solid #c6c6c6;
+  box-shadow: 2px 2px 12px rgba(0,0,0,0.1), 1px 1px 4px rgba(0,0,0,0.12);
 }
 
 .sidenav-container {
