--- a/src/styles.css
+++ b/src/styles.css
@@ -64,7 +64,8 @@ section {
   background: #fff;
   padding: 2em;
   margin-bottom: 1rem;
-  border: 1px solid #c6c6c6;
+  border-radius: 3px;
+  box-shadow: 2px 2px 12px rgba(0,0,0,0.1), 1px 1px 4px rgba(0,0,0,0.12);
 }
 
 .cldn-btn {
