Final design, various bug fixes, and backend auth testing

--- a/src/app/clusters/cluster/cluster.component.html
+++ b/src/app/clusters/cluster/cluster.component.html
@@ -1,6 +1,15 @@
 <div class="instance-section">
-  <h2 class="float-left">{{ title | uppercase }} CLUSTER</h2>
-  <h2 class="float-right">${{ totalCost | number : '1.2-2' }}</h2>
+  <div class="row">
+    <div class="col-md-4">
+      <h2 class="float-left">{{ title | uppercase }}</h2>
+    </div>
+    <div class="col-md-4">
+      <h2 class="text-center">{{ startedBy | uppercase }}</h2>
+    </div>
+    <div class="col-md-4">
+      <h2 class="float-right">${{ totalCost | number : '1.2-2' }}</h2>
+    </div>
+  </div>
   <div class="button-bar">
     <button type="button" class="btn btn-outline-danger" id="terminate-AWS-{{title}}" (click)="terminateClusterAWS()">
       <i class="fas fa-trash-alt fa-lg"></i>
@@ -10,8 +19,6 @@
       <i class="fas fa-trash-alt fa-lg"></i>
       <i style="margin-left:10px" class="fab fa-jenkins fa-lg"></i>
     </button>
-    <!--<button type="button" class="btn btn-outline-primary" id="analyze-RDS" (click)="analyze('rds')"><i class="far fa-chart-bar fa-lg"></i></button>-->
-    <!--<button type="button" class="btn btn-outline-primary" id="cost-RDS"><i class="fas fa-dollar-sign fa-lg"></i></button>-->
   </div>
   <table id="{{ title }}Table" class="table">
     <thead>
