--- a/src/app/efs/efs.component.html
+++ b/src/app/efs/efs.component.html
@@ -1,9 +1,7 @@
 <section>
-  <h2>EFS INSTANCES</h2>
+  <h2>EFS</h2>
   <div class="button-bar">
-    <button type="button" class="btn btn-outline-success" id="create-EFS" (click)="createInstance()"><i class="fas fa-plus fa-lg"></i></button>
     <button type="button" class="btn btn-outline-danger" id="terminate-AWS-EFS" (click)="terminateInstances()"><i class="fas fa-trash-alt fa-lg"></i></button>
-    <!--<button type="button" class="btn btn-outline-primary" id="analyze-EFS" (click)="analyze('efs')"><i class="far fa-chart-bar fa-lg"></i></button>-->
   </div>
   <table id="EFSTable" class="table">
     <thead>
@@ -35,27 +33,3 @@
   </table>
   <span *ngIf="!efsInstances[0]">There are no EFS instances running.</span>
 </section>
-
-<!-- Modal
-<div class="modal fade" id="createEFS" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Launch EFS Instance</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="form-group">
-                        <label for="InstanceName">Instance Name</label>
-                        <input type="text" class="form-control" id="InstanceName" name="InstanceName" placeholder="Enter Instance Name">
-                    </div>
-                    <button (click)="create()" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
--->
