--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,3 +1,12 @@
 a.nav-link {
-    color: #000;
+  color: #000;
+}
+
+.nav-tabs .nav-link.active {
+  color: #000;
+  border-color: #dee2e6 #dee2e6 #dee2e6;
+}
+
+section {
+  border-radius: 0 0 3px 3px;
 }
