--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -10,33 +10,27 @@
   <div class="tab-content" id="tabContent">
     <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
       <div class="form-group row">
-        <label class="col-2 col-form-label">Username</label>
+        <label class="col-1 col-form-label font-weight-bold">Username</label>
         <div class="col-4">
-          <input class="form-control" type="text" value="{{ userProfile?.username }}">
+          <input class="form-control-plaintext" type="text" readonly value="{{ userProfile?.username }}">
         </div>
       </div>
       <div class="form-group row">
-          <label class="col-2 col-form-label">Email</label>
-          <div class="col-4">
-            <input class="form-control" type="text" value="{{ userProfile?.email }}">
-          </div>
-        </div>
-      <div class="form-group row">
-          <label class="col-2 col-form-label">First Name</label>
-          <div class="col-4">
-            <input class="form-control" type="text" value="{{ userProfile?.firstName }}">
-          </div>
-      </div>
-      <div class="form-group row">
-          <label class="col-2 col-form-label">Last Name</label>
-          <div class="col-4">
-            <input class="form-control" type="text" value="{{ userProfile?.lastName }}">
-          </div>
-      </div>
-      <div class="form-group row">
-        <label class="col-2 col-form-label"></label>
+        <label class="col-1 col-form-label font-weight-bold">Email</label>
         <div class="col-4">
-          <button style="width:100%" type="submit" class="cldn-btn">Submit</button>
+          <input class="form-control-plaintext" type="text" readonly value="{{ userProfile?.email }}">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-1 col-form-label font-weight-bold">First Name</label>
+        <div class="col-4">
+          <input class="form-control-plaintext" type="text" readonly value="{{ userProfile?.firstName }}">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-1 col-form-label font-weight-bold">Last Name</label>
+        <div class="col-4">
+          <input class="form-control-plaintext" type="text" readonly value="{{ userProfile?.lastName }}">
         </div>
       </div>
     </div>
