--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -8,12 +8,12 @@ a.nav-link {
 }
 
 .nav-item:hover {
-  background-color: #f49535;
+  background-color: #36669b;
 }
 
 a.nav-link.active-link {
-  background-color: #ffac59;
-  color: #fff;
+  background-color: #6993cc;
+  color: #000;
 }
 
 a.nav-link:hover {
@@ -31,25 +31,24 @@ a.nav-link:hover {
 }
 
 .sidenav {
-  height: 100vh;
   width: 200px;
+  background: #9bc3ff;
   display: block;
   box-shadow: 2px 2px 12px rgba(0,0,0,0.1), 1px 1px 4px rgba(0,0,0,0.12);
 }
 
 .sidenav-container {
-  height: 100vh;
   position: absolute;
   left: 0;
   right: 0;
-}
-
-.container {
-    padding: 75px 0 0 0;
 }
 
 .sidenav-content {
   display: flex;
   align-items: left;
   justify-content: left;
+}
+
+.mat-drawer-container {
+  background: none;
 }
