--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,24 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
+html {
+  height: 100%;
+}
+thead {
+  background: #fafafa;
+}
+
 * {
-  font: 18px "Oswald", sans-serif;
-  font-weight: 300;
+  font: 16px "Roboto", sans-serif;
 }
 
 body {
-  background: #f1f1f1;
+  background: #fafafa;
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 95%;
+  padding: 75px 0;
 }
 
 th,
@@ -21,10 +30,11 @@ h2,
 .navbar-brand,
 .nav-link {
   font-weight: 400;
+  font-family: 'Oswald', sans-serif;
 }
 
-h2 {
-  font-size: 1.5rem;
+.nav-link {
+  font-size: 18px;
 }
 
 a {
@@ -47,7 +57,7 @@ tbody>tr {
 tr.active,
 tbody>tr:hover {
   color: #fff;
-  background-color: #ffac59;
+  background-color: #6993cc;
 }
 
 #graph {
@@ -56,7 +66,7 @@ tbody>tr:hover {
 }
 
 .navbar {
-  background-color: #ffac59;
+  background: #36669b;
   border-radius: 5px;
 }
 
@@ -70,8 +80,8 @@ section {
 
 .cldn-btn {
   color: #fff;
-  background-color: #ffac59;
-  border-color: #ffac59;
+  background-color: #6993cc;
+  border-color: #6993cc;
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
   display: inline-block;
   font-weight: 400;
@@ -101,6 +111,11 @@ section {
 
 .cldn-btn:hover {
   color: #fff;
-  background-color: #f49535;
-  border-color: #000;
+  background-color: #6993cc;
+  border-color: #36669b;
+}
+
+.cdk-overlay-pane {
+  max-width: 100vw;
+  width: fit-content;
 }
