--- a/src/app/efs/efs.component.html
+++ b/src/app/efs/efs.component.html
@@ -1,35 +1,48 @@
 <section>
-  <h2>EFS</h2>
-  <div class="button-bar">
-    <button type="button" class="btn btn-outline-danger" id="terminate-AWS-EFS" (click)="terminateInstances()"><i class="fas fa-trash-alt fa-lg"></i></button>
+  <div class="row">
+    <div class="col-md-6">
+      <h2>EFS</h2>
+    </div>
+    <div *ngIf="!loading" class="col-md-6">
+      <button type="button" class="float-right btn btn-outline-danger" id="terminate-AWS-EFS" (click)="terminateInstances()">
+        <i class="fas fa-trash-alt fa-lg"></i>
+      </button>
+    </div>
   </div>
-  <table id="EFSTable" class="table">
-    <thead>
-      <tr>
-        <th scope="col"></th>            
-        <th scope="col">ID</th>
-        <th scope="col">Context</th>        
-        <th scope="col">Name</th>
-        <th scope="col">Size</th>
-        <th scope="col">Status</th>
-        <th scope="col">Creation Date</th>
-      </tr>
-    </thead>
-    <tbody *ngFor="let instance of efsInstances">
-      <tr>
-        <td>
+  <div class="text-center" *ngIf="loading">
+    <i class="fas fa-spinner fa-pulse fa-2x"></i>
+  </div>
+  <ng-container *ngIf="!loading">
+    <table id="EFSTable" class="table">
+      <thead>
+        <tr>
+          <th scope="col"></th>
+          <th scope="col">ID</th>
+          <th scope="col">Context</th>
+          <th scope="col">Name</th>
+          <th scope="col">Zone</th>
+          <th scope="col">Size</th>
+          <th scope="col">Status</th>
+          <th scope="col">Creation Date</th>
+        </tr>
+      </thead>
+      <tbody *ngFor="let instance of efsInstances">
+        <tr>
+          <td>
             <div class="form-check">
-                <input type="checkbox" [(ngModel)]="instance.checked">
+              <input type="checkbox" [(ngModel)]="instance.checked">
             </div>
-        </td>
-        <th>{{ instance.id }}</th>
-        <td></td>        
-        <td></td>
-        <td>{{ instance.size }}</td>
-        <td>{{ instance.status }}</td>
-        <td>{{ instance.creationDate | amDateFormat: 'M/D h:mm A' }}</td>
-      </tr>
-    </tbody>
-  </table>
-  <span *ngIf="!efsInstances[0]">There are no EFS instances running.</span>
+          </td>
+          <th>{{ instance.id }}</th>
+          <td>{{ instance.context }}</td>
+          <td>{{ instance.name }}</td>
+          <td>{{ instance.zone }}</td>
+          <td>{{ instance.size }}</td>
+          <td>{{ instance.status }}</td>
+          <td>{{ instance.creationDate | amDateFormat: 'M/D h:mm A' }}</td>
+        </tr>
+      </tbody>
+    </table>
+    <span *ngIf="!efsInstances[0]">There are no EFS instances running.</span>
+  </ng-container>
 </section>
