--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -21,20 +21,25 @@ a.nav-link:hover {
 }
 
 .sidebar {
-  margin-left: 1em;
+  margin-right: 1em;
+  width: 24px;
+  height: auto;
 }
 
 .nav-item {
-  text-align: right;
   font-size: 20px;
-  border-bottom: 1px solid rgba(0,0,0,0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.nav-item:last-of-type {
+  border-bottom: none;
 }
 
 .sidenav {
   width: 200px;
   background: #9bc3ff;
   display: block;
-  box-shadow: 2px 2px 12px rgba(0,0,0,0.1), 1px 1px 4px rgba(0,0,0,0.12);
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1), 1px 1px 4px rgba(0, 0, 0, 0.12);
 }
 
 .sidenav-container {
