--- a/src/app/ec2/ec2.component.html
+++ b/src/app/ec2/ec2.component.html
@@ -4,9 +4,14 @@
       <h2>EC2</h2>
     </div>
     <div *ngIf="!loading" class="col-md-6">
-      <button type="button" class="float-right btn btn-outline-danger" id="terminate-EC2" (click)="terminateInstances()">
-        <i class="fas fa-trash-alt fa-lg"></i>
-      </button>
+      <div class="float-right button-bar">
+        <button type="button" class="btn btn-outline-primary" id="refresh-EC2" (click)="setupInstances()">
+          <i class="fas fa-sync-alt fa-lg"></i>
+        </button>
+        <button type="button" class="btn btn-outline-danger" id="terminate-EC2" (click)="terminateInstances()">
+          <i class="fas fa-trash-alt fa-lg"></i>
+        </button>
+      </div>
     </div>
   </div>
   <div class="text-center" *ngIf="loading">
