--- a/src/app/monitor/monitor.component.html
+++ b/src/app/monitor/monitor.component.html
@@ -35,13 +35,13 @@
                 <i class="fas fa-ban fa-lg"></i>
               </span>
             </td>
-            <td *ngIf="!cluster.destroyed && !cluster.marked && janitorRunning" colspan="2">
+            <td *ngIf="!cluster.destroyed && !cluster.marked && janitor.region === cluster.region" colspan="2">
               <span>Not yet marked for destruction</span>
             </td>
-            <td *ngIf="!cluster.destroyed && !janitorRunning" colspan="3">
+            <td *ngIf="!cluster.destroyed && janitor.region !== cluster.region" colspan="3">
               <span>Janitor not running</span>
             </td>
-            <td *ngIf="!cluster.destroyed && janitorRunning">
+            <td *ngIf="!cluster.destroyed && janitor.region === cluster.region">
               <span matTooltip="Monitor" *ngIf="!cluster.monitored" class="option-button" (click)="optIn(cluster)">
                 <i class="fas fa-eye fa-lg"></i>
               </span>
