--- a/src/app/clusters/cluster/cluster.component.css
+++ b/src/app/clusters/cluster/cluster.component.css
@@ -3,7 +3,7 @@
   padding: 2em;
   margin-bottom: 1rem;
   border-radius: 3px;
-  box-shadow: 2px 2px 12px rgba(0,0,0,0.1), 1px 1px 4px rgba(0,0,0,0.12);
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1), 1px 1px 4px rgba(0, 0, 0, 0.12);
 }
 
 .button-bar {
