--- a/src/app/clusters/cluster/cluster.component.html
+++ b/src/app/clusters/cluster/cluster.component.html
@@ -8,7 +8,7 @@
         <h3 class="float-left">{{ cluster.name | uppercase }}</h3>
       </div>
       <div class="col-md-3">
-        <h3 class="text-center">Owner: {{ startedBy | uppercase }}</h3>
+        <h3 class="text-center">Owner: {{ startedBy }}</h3>
       </div>
       <div class="col-md-3">
         <h3 class="text-center">Total: ${{ totalCost | number : '1.2-2' }}</h3>
